
* Release 0.3.0
	* Fixed Bug #1: globbing an empty string fails